--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~9.0.1",
     "@angular/router": "~9.0.1",
     "@auth0/angular-jwt": "^4.0.0",
+    "@microsoft/signalr": "^5.0.5",
     "@ngtools/webpack": "^11.2.8",
     "alertifyjs": "^1.13.1",
     "bootstrap": "^4.4.1",
